# FlowZ

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  flowz-vision.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: brand-provider-smoke.json  e2e-findings.md  e2e-test-plan.html  fal-pricing-sources.md  final-product-audit-prompt.md  flowz-implementation-roadmap.html  node-module-architecture-review.md  release-security.md
scripts/: build-icon-master.py  generate-app-icons.mjs  generate-google-fonts-catalog.mjs  rehearse-macos-release.sh  verify-app-icons.mjs  verify-clean-checkout.sh  verify-google-fonts-snapshot.mjs  verify-lazy-bundle.mjs  verify-macos-release-artifacts.sh  verify-no-secrets.mjs  verify-release-version.mjs
src/: App.tsx  api.ts  i18n-schema.ts  i18n-static.test.ts  i18n.test.ts  i18n.ts  main.tsx  registry.ts  store.asset-binding.test.ts  store.ts  (+12 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/binaries/: SHA256SUMS
src-tauri/capabilities/: default.json
src-tauri/examples/: verify_updater_signature.rs
src-tauri/icons/: icon.icns
src-tauri/src/: artboard_agent.rs  artboard_composite.rs  brand.rs  execution_snapshot.rs  export.rs  fal_image.rs  fal_image_tools.rs  fal_provider.rs  image_transform.rs  image_trim.rs  lib.rs  main.rs  recording.rs  transcription.rs  web_context.rs
src-tauri/src/persistence/: artboard.rs  blob_store.rs  database.rs  document_catalog.rs  emergency_outbox.rs  fal_empirical_cost.rs  media.rs  mod.rs  project_repository.rs
src-tauri/tests/fixtures/: project-v2.json
(+302 files in other folders)
