[package]
name = "flowz"
version = "0.1.3"
description = "Local visual AI workflows"
authors = ["FlowZ"]
edition = "2021"
default-run = "flowz"

[lib]
name = "flowz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
sha2 = "0.10"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
keyring = { version = "3", features = ["apple-native"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
eventsource-stream = "0.2"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
tokio = { version = "1", features = ["io-util", "macros", "sync", "net", "time"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
scraper = "0.22"
wait-timeout = "0.2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
minisign-verify = "=0.2.5"
idna = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
